# test-shop

./: .dockerignore  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml
product/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
product/migrations/: 0001_initial.py  0002_initial.py  0003_discount.py  0004_alter_discount_item.py  0005_item_discount_percent_delete_discount.py  0006_promocodeactivity.py  0007_promocode.py  0008_delete_promocodeactivity_and_more.py  0009_cashback_alter_bucketitems_count_and_more.py  0010_order.py  0011_usecashbackamount_and_more.py  0012_add_default_value_for_min_amount_cachback.py  0013_remove_order__items_list.py  0014_rename_account_id_order_account.py  0015_rename_order_summ_order_order_sum.py  0016_rename_min_order_amout_cashback_min_order_amount.py  0017_order_delivery_date.py  0018_rename_delivery_date_order_delivery_date_time.py  0019_order_email_hours_before_delivery.py  0020_auto_20220306_2035.py  0021_order_delivery_date_time.py  0022_alter_emaildeliverynotification_hour_before_delivery.py  0023_add_default_value_for_delivery_date_time.py  0024_alter_order_delivery_date_time.py  0025_auto_20220316_2034.py
product/utils/: bucket.py  bucket_item.py  cashback.py  create_tasks.py  item.py  promocode.py
root/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
root/migrations/: 0001_initial.py  0002_customuser_amount_accrued_cashback.py  0003_choicesemaildeliverynotification.py  (+3 more)
shop/: __init__.py  celery.py  settings.py  urls.py
(+1 files in other folders)
